Ported challenge image choosing

--- a/client/app/modules/common/image-chooser/image-chooser-modal.tpl.html
+++ b/client/app/modules/common/image-chooser/image-chooser-modal.tpl.html
@@ -1,6 +1,6 @@
-<md-dialog id="crop-poster-modal">
+<md-dialog id="image-chooser-modal">
     <md-toolbar layout="row" layout-align="start center">
-        <p>Your Poster Image</p>
+        <p>Choose Image</p>
         <div flex></div>
         <md-button class="md-fab" ng-click="save()" ng-disabled="!isImageChosen" analytics-on analytics-event="choosePoster">
             <i class="fa fa-save"></i>
@@ -10,5 +10,5 @@
         </md-button>
     </md-toolbar>
 
-    <image-chooser final-image="imageCropResult" is-image-chosen="isImageChosen"></image-chooser>
+    <image-chooser final-image="imageCropResult" is-image-chosen="isImageChosen" shape="shape"></image-chooser>
 </md-dialog>
