--- a/client/app/modules/common/image-chooser/image-chooser.tpl.html
+++ b/client/app/modules/common/image-chooser/image-chooser.tpl.html
@@ -1,5 +1,5 @@
 <div class="image-chooser-drop" ngf-drop ng-model="selectedFiles" ngf-drag-over-class="image-chooser-drop-dragover" flex>
-	<img-crop image="inputImage" result-image="finalImage" area-type="shape"></img-crop>
+	<img-crop image="inputImage" result-image="finalImage" area-type="{{shape}}"></img-crop>
 </div>
 
 <div layout="row" layout-align="space-around">
