--- a/client/app/modules/common/image-chooser/image-chooser-modal.tpl.html
+++ b/client/app/modules/common/image-chooser/image-chooser-modal.tpl.html
@@ -10,5 +10,5 @@
         </md-button>
     </md-toolbar>
 
-    <image-chooser final-image="imageCropResult" is-image-chosen="isImageChosen" shape="shape"></image-chooser>
+    <image-chooser final-image="imageCropResult" is-image-chosen="isImageChosen" shape="shape" aspect-ratio="aspectRatio" final-image-size="finalImageSize"></image-chooser>
 </md-dialog>
